Minor html changes

--- a/tax/src/main/resources/static/index.html
+++ b/tax/src/main/resources/static/index.html
@@ -1,11 +1,26 @@
-
 <!DOCTYPE HTML>
 <html>
-<head> 
-    <title>Welcome</title> 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<head>
+<style>
+h1 {text-align: center;}
+h3 {text-align: center;}
+div {text-align: center;}
+</style>
+<title>Welcome</title>
+
 </head>
+
 <body>
-    <h3>Hello , Enter the item details <a href="/tax/showFormForAdd">here</a></h3>
+
+<br>
+<h1>Welcome</h1>
+
+<br>
+<br>
+
+<h3><a href="/tax/showFormForAdd">Add Item Details</a></h3>
+
+</div>
 </body>
+
 </html>
